apps/services/media/tanoshi/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tanoshi-svc
  labels:
    app: tanoshi
  annotations:
    tailscale.com/hostname: "read"
spec:
  selector:
    app: tanoshi
  ports:
  - name: web
    port: 80
    targetPort: 80
    protocol: TCP
  loadBalancerClass: tailscale
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: tanoshi-upnp
  labels:
    app: tanoshi
spec:
  selector:
    app: tanoshi
  ports:
  - name: web
    port: 32380
    targetPort: 80
    protocol: TCP
  type: LoadBalancer
